docs(alarm): fix schemas and specifications, add presentation layer to update range and intrusion rule endpoint
